# dbt-dataops

./: .env.example  .gitignore  .user.yml  Dockerfile.dbt  README.md  config.yml  profiles.yml  pyproject.toml
.github/workflows/: dbt-cd.yml  dbt-ci.yml  dbt-release.yml  dbt-test.yaml  tag_test.yml
dbt_projects/addresses/: dbt_project.yml
dbt_projects/addresses/models/: addresses_bronze.sql  addresses_silver.sql  cities_bronze.sql  cities_silver.sql  schema.yml  spend_by_city_gold.sql
dbt_projects/addresses/seeds/: cities.csv
dbt_projects/nyc_taxi/: dbt_project.yml
dbt_projects/nyc_taxi/models/: schema.yml  trip_data_bronze.sql  trip_data_silver.sql
dbt_projects/nyc_taxi/seeds/: trip_data.csv
scripts/: fix_sql.sh  lint_sql.sh  load_data.py
